<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/download_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_download"
        app:tint="@color/white" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnDownload"
        app:layout_constraintTop_toBottomOf="@id/top_banner">

        <RadioButton
            android:id="@+id/glide_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_small"
            android:onClick="selectUrlOptions"
            android:text="@string/glide_title"
            android:textSize="@dimen/font_medium" />

        <RadioButton
            android:id="@+id/load_app_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_small"
            android:onClick="selectUrlOptions"
            android:text="@string/load_app_title"
            android:textSize="@dimen/font_medium" />

        <RadioButton
            android:id="@+id/retrofit_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_small"
            android:onClick="selectUrlOptions"
            android:text="@string/retrofit_title"
            android:textSize="@dimen/font_medium" />
    </RadioGroup>

    <com.mehedi.loadapp.ui.custom.DownloadButton
        android:id="@+id/btnDownload"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:button_completed_color="@color/colorAccent"
        app:button_loading_color="@color/colorPrimaryDark"
        app:button_normal_color="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
